@@ -81,6 +81,9 @@ Version 8.38 xx-xxx-xxxx
 20. A possessively repeated conditional group that could match an empty string,
     for example, /(?(R))*+/, was incorrectly compiled.
 
+21. Fix infinite recursion in the JIT compiler when certain patterns such as
+    /(?:|a|){100}x/ are analysed.
+
 
 Version 8.37 28-April-2015
 --------------------------
